<resources>
    <string name="app_name">GeoJournal</string>
    <string name="google_map_api_key">AIzaSyBIxPUIlgWvpiqzbv8Y1ovoxmDoiDiHEUQ</string>
    <string name="empty" />

    <string name="hintLoginEmail">Email</string>
    <string name="hintLoginPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="lblOR">OR</string>
    <string name="hintSignUpEmail">Email</string>
    <string name="hintSignUpPassword">Password</string>
    <string name="hintSignUpConfirmPassword">Confirm Password</string>
    <string name="hintSignUpFName">First Name</string>
    <string name="hintSignUpLName">Last Name</string>
    <string name="hintSignUpDisplayName">Display Name</string>
    <string name="btnSignUp">Sign Up</string>

    <string name="lblProfileFName">First Name :</string>
    <string name="lblProfileLName">Last Name :</string>
    <string name="lblProfileDisplayName">Display Name :</string>
    <string name="lblProfileEmail">Email :</string>
    <string name="lblProfilePassword">Password :</string>
    <string name="lblProfileConfirmPassword">Confirm Password :</string>
    <string name="lblProfileDOB">Date of Birth :</string>
    <string name="lblProfilePhone">Phone :</string>
    <string name="lblProfileSelectPhoto">Select Photo</string>
    <string name="btnProfileSave">Save Profile</string>

    <string name="lblDisplayTravelDate">Travel Date :</string>
    <string name="lblDisplayItinerary">Itinerary and Plans</string>
    <string name="lblDisplayCulture">Culture and Cuisine</string>
    <string name="lblTravelTips">Travel Tips</string>
    <string name="lblDisplayReflections">Reflections and Thoughts</string>
    <string name="lblDisplayLanguage">Language Notes</string>
    <string name="lblDisplayExpenses">Expenses</string>

    <string name="lblUploadTravelPlace">Travel Place</string>
    <string name="lblUploadTravelDate">Travel Date</string>
    <string name="hintUploadTravelPlace">Enter Place Travelled</string>
    <string name="hintUploadTravelDate">Enter Date Travelled On</string>
    <string name="btnUploadPlaceNext">Next</string>
    <string name="btnUploadPlaceExit">Back to Home</string>
    <string name="btnUploadPicture">Upload Picture</string>
    <string name="btnUploadPictureNext">Next</string>
    <string name="btnUploadPictureExit">Back to Home</string>
    <string name="lblUploadItinerary">Details about the itinerary and plan executed for the trip.</string>
    <string name="hintUploadItinerary">Enter notes here...</string>
    <string name="lblUploadExpense">Details about the Expenses.</string>
    <string name="hintUploadExpense">Enter notes here...</string>
    <string name="btnUploadIENext">Next</string>
    <string name="btnUploadIEExit">Back to Home</string>
    <string name="lblUploadCulture">Details about the culture and cuisine of the visited place.</string>
    <string name="hintUploadCulture">Enter notes here...</string>
    <string name="lblUploadLanguage">Notes about languages spoken at the places of visit.</string>
    <string name="hintUploadLanguage">Enter notes here...</string>
    <string name="btnUploadCLNext">Next</string>
    <string name="btnUploadCLExit">Back to Home</string>
    <string name="lblUploadReflection">Write your experiences and thoughts about the place and the trip.</string>
    <string name="hintUploadReflection">Enter notes here...</string>
    <string name="lblUploadTips">Write some tips to remember while travelling to this place.</string>
    <string name="hintUploadTips">Enter notes here...</string>
    <string name="btnUploadRTSave">Save</string>
    <string name="btnUploadRTExit">Back to Home</string>

    <string name="btnMyProfile">My Profile</string>
    <string name="btnAddLocation">Add Location</string>
    <string name="btnLogout">Log Out</string>

    <string name="em" />
    <string name="phno">Phone No</string>
    <string name="flip_camera">Switch Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="info">Click on the image to take a new one</string>
    <string name="reginfo">Click on the image to upload photo</string>
    <string name="inforeg">Click on the Image \n to upload your photo</string>
    <string name="skip_photo">Done</string>
    <string name="inforegimg">Click on the Image to upload a new one</string>
    <string name="changepwd">Change Password</string>
    <string name="confpwd">Confirm \n Change Password</string>

    <string name="lblDropPinNote">NOTE - Drag the Yellow marker wherever you want to Add Location, then proceed with adding new location. Red markers show the locations you have already added.</string>

</resources>