<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp">

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnSignUp"
        app:layout_constraintEnd_toEndOf="@+id/txtSignupPhno"
        app:layout_constraintStart_toStartOf="@+id/txtSignupPhno"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupPhno" />

    <TextView
        android:id="@+id/lblOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblOR"
        android:textColor="#020202"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintLoginPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/txtLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <EditText
        android:id="@+id/txtSignUpFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hintSignUpFName"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtSignUpLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintSignUpLName"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpFName"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpFName"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpFName" />

    <EditText
        android:id="@+id/txtSignUpDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintSignUpDisplayName"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpLName"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpLName"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpLName" />

    <EditText
        android:id="@+id/txtSignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintSignUpEmail"
        android:inputType="textEmailAddress"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpDisplayName"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpDisplayName"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpDisplayName" />

    <EditText
        android:id="@+id/txtSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintSignUpPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpEmail"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpEmail" />

    <EditText
        android:id="@+id/txtSignUpConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintSignUpConfirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpPassword"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpPassword" />

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintLoginEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/lblOR"
        app:layout_constraintStart_toStartOf="@+id/lblOR"
        app:layout_constraintTop_toBottomOf="@+id/lblOR" />

    <EditText
        android:id="@+id/txtSignupPhno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phno"
        android:inputType="textPersonName"
        android:text="@string/em"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>